# 1S2026_LFPA_-202307821

./: README.md  tarea.cpp
Practica/: Estudiante.h  cursos.lfp  lector.cpp  menu.cpp
Practica1/: README.md  datos.lfp  estudiante.lfp  menu.cpp  notas.lfp
Practica1/include/: Curso.h  Estadistica.h  Estudiante.h  Nota.h  reportes.h
Practica1/src/: Estadistica.cpp  Estudiante.cpp  Nota.cpp  curso.cpp  reportes.cpp
Proyecto2/: arbol.dot
Proyecto2/MedLexerQt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Proyecto2/MedLexerQt/src/: AnalizadorLexico.cpp  AnalizadorLexico.h  DataModel.h  ErrorManager.cpp  ErrorManager.h  Parser.cpp  Parser.h  Reporte.cpp  Reporte.h  Token.cpp  Token.h
Proyecto2/examples/: caso02_valido_completo.task  caso12_error_mixto.task
Proyecto2/reportes/: reporte1_kanban.html  reporte2_responsables.html  reporte3_errores.html
Proyecto2/src/: CMakeLists.txt  ErrorManager.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  MainWindow.cpp  MainWindow.h  NodoArbol.h  ReportGenerator.cpp  ReportGenerator.h  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h  TaskScript.pro  Token.h  main.cpp  main_qt.cpp
Proyecto2/tests/: caso01_valido_minimo.task  caso03_valido_prioridades.task  caso04_valido_multiples_responsables.task  caso05_valido_una_tarea_por_columna.task  caso06_error_lexico_caracter.task  caso07_error_lexico_cadena_abierta.task  caso08_error_lexico_fecha_invalida.task  caso09_error_sintactico_falta_tablero.task  caso10_error_sintactico_falta_llave.task  caso11_error_sintactico_prioridad_invalida.task
TAREA 1/: tarea.cpp
